CNSDEVCOLECT/force-app/main/default/objects/Linea_Bancaria__c/Linea_Bancaria__c.object-meta.xml
<CustomObject>
    <label>Línea Bancaria</label>
    <nameField>
        <label>Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Líneas Bancarias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>