CNSDEVCOLECT/force-app/main/default/objects/Linea_Bancaria__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Líneas Bancarias</relationshipLabel>
    <relationshipName>LineasBancarias</relationshipName>
    <type>Lookup</type>
</CustomField>