CNSDEVCOLECT/force-app/main/default/objects/Linea_Bancaria__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banco Bice</fullName>
            </value>
            <value>
                <fullName>Banco BTG Pactual Chile</fullName>
            </value>
            <value>
                <fullName>Banco Consorcio</fullName>
            </value>
            <value>
                <fullName>Banco de Chile</fullName>
            </value>
            <value>
                <fullName>Banco de Crédito e Inversiones</fullName>
            </value>
            <value>
                <fullName>Banco del Estado de Chile</fullName>
            </value>
            <value>
                <fullName>Banco do Brasil S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Falabella</fullName>
            </value>
            <value>
                <fullName>Banco Internacional</fullName>
            </value>
            <value>
                <fullName>Banco Ripley</fullName>
            </value>
            <value>
                <fullName>Banco Santander-Chile</fullName>
            </value>
            <value>
                <fullName>Banco Security</fullName>
            </value>
            <value>
                <fullName>Bank of China, Agencia en Chile</fullName>
            </value>
            <value>
                <fullName>China Construction Bank, Agencia en Chile</fullName>
            </value>
            <value>
                <fullName>HSBC Bank (Chile)</fullName>
            </value>
            <value>
                <fullName>Itaú Corpbanca</fullName>
            </value>
            <value>
                <fullName>JP Morgan Chase Bank, N.A.</fullName>
            </value>
            <value>
                <fullName>Scotiabank Chile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>