CNSDEVCOLECT/force-app/main/default/objects/Linea_Bancaria__c/fields/Id_Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Id_Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Líneas Bancarias</relationshipLabel>
    <relationshipName>Lineas_Bancarias</relationshipName>
    <type>Lookup</type>
</CustomField>