CNSDEVCOLECT/force-app/main/default/objects/Linea_Bancaria__c/fields/Monto_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Aprobado__c</fullName>
    <label>Monto Aprobado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>