CNSDEVCOLECT/force-app/main/default/objects/Linea_Bancaria__c/fields/Monto_Utilizado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Utilizado__c</fullName>
    <description>Monto utilizado en línea bancaria</description>
    <label>Monto Utilizado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>